infrastructure/k8s/gameserver/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameserver
  template:
    metadata:
      labels:
        app: gameserver
    spec:
      containers:
      - name: gameserver
        image: lvl13mage/steamsnstreams_gameserver:production-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
