infrastructure/k8s/gameserver/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameserver
spec:
  selector:
    app: gameserver
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
