infrastructure/k8s/gameserver/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameserver
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: gameserver.browsergame.lvl13mage.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gameserver
            port:
              number: 80
